[package]
name = "pwmd"
version = "0.0.1"
edition = "2018"
authors = ["Kevin Bader"]
license = "MIT"
repository = "https://github.com/kevinbader/pwmd"
description = "Exposes PWM chips to DBUS."
categories = ["api-bindings", "filesystem", "os::linux-apis"]
keywords = ["pwm", "dbus", "led"]

[dependencies]
anyhow = "1.0.42"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
zbus = "1.9.1"
enumflags2 = "0.6.4"
serde = { version = "1.0.126", features = ["derive"] }
zvariant_derive = "2.7.0"
zvariant = "2.7.0"
zbus_macros = "1.9.1"
thiserror = "1.0.26"
temp-dir = "0.1.11"
structopt = "0.3.23"
color-eyre = "0.5.11"
rand = "0.8.4"
