[package]
name = "pwmd"
version = "0.2.0"
edition = "2018"
authors = ["Kevin Bader"]
license = "MIT"
repository = "https://github.com/kevinbader/pwmd"
description = "Exposes PWM chips to DBUS."
categories = ["api-bindings", "filesystem", "os::linux-apis"]
keywords = ["pwm", "dbus", "led"]

[dependencies]
anyhow = "1.0.42"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
zbus = "2.0.0-beta.7"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.26"
temp-dir = "0.1.11"
structopt = "0.3.23"
rand = "0.8.4"
